k8s/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image:  public.ecr.aws/r0h6p1y8/lcr/eks:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
      nodeSelector:
        purpose: custom
