k8s/mongodb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
      containers:
        - name: mongodb
          image: mongo:latest
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-storage
          ports:
            - containerPort: 27017

      nodeSelector:
        purpose: custom
