k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 80
      targetPort: 8088
  selector:
    app: backend
  type: ClusterIP
