k8s/kafka-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka-port-9092  # 이름 추가
            - containerPort: 9093
              name: kafka-port-9093  # 이름 추가
            - containerPort: 10000
              name: kafka-port-10000  # 이름 추가
      nodeSelector:
        purpose: custom
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: dev
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka-port-9092  # 이름 추가
    - port: 10000
      targetPort: 10000
      name: kafka-port-10000  # 이름 추가
  selector:
    app: kafka
