k8s/kafka-ui-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
              name: kafka-ui-port
      nodeSelector:
        purpose: custom
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: dev
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: kafka-ui-port
  selector:
    app: kafka-ui
