k8s/logstash-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:7.14.1
          ports:
            - containerPort: 5000
            - containerPort: 9600
      nodeSelector:
        purpose: custom
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: dev
spec:
  ports:
    - port: 5000
    - port: 9600
  selector:
    app: logstash
