k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: dev
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
