k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"                             # SSL 리디렉션 비활성화
    nginx.ingress.kubernetes.io/rewrite-target: /$2                                # URL 경로 재작성
    kubernetes.io/ingress.class: nginx                                              # Ingress 컨트롤러 지정
spec:
  ingressClassName: nginx
  rules:
    - host: medihub.info
      http:
        paths:
          - path: /boot(/|$)(.*)  # /boot로 시작하는 경로에 대해 처리
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8088
